--- a/meishijie/css/meishijie.css
+++ b/meishijie/css/meishijie.css
@@ -105,7 +105,7 @@ body{
 }*/
 
 
-.nav {
+/*.nav {
 	height: 76px;
 	width: 100%;
 	background: #fff;
@@ -240,7 +240,7 @@ body{
 }
 
 .nav ul li .dw .dww_cpdq .bgitem {
-	background: url(../images/jccp_navbgg.png) right bottom no-repeat;
+	/*background: url(../images/jccp_navbgg.png) right bottom no-repeat;*/
 	position: absolute;
 	right: -60px;
 	bottom: -30px;
@@ -249,7 +249,7 @@ body{
 }
 
 .nav ul li .dw .dww_ysjk .bgitem {
-	background: url(../images/ysjk_navbg.png) right bottom no-repeat;
+/*	background: url(../images/ysjk_navbg.png) right bottom no-repeat;*/
 	position: absolute;
 	right: -60px;
 	bottom: -30px;
@@ -308,3 +308,792 @@ body{
 	background: #ff3232;
 	color: #fff;
 }
+
+/*main*/
+
+
+
+
+.main_w {
+	width: 100%;
+	position: relative;
+	z-index: 500;
+}
+
+.main {
+	width: 990px;
+	margin: 0px auto;
+}
+
+.item {
+	width: 990px;
+	background: #fff;
+}
+
+.bbtitles {
+	height: 120px;
+	line-height: 120px;
+	font-size: 24px;
+	color: #222;
+	text-align: center;
+	font-family: Microsoft Yahei;
+	position: relative;
+	display: block;
+}
+
+.bbtitles a {
+	color: #222;
+	display: inline-block;
+	vertical-align: top;
+	*display: inline;
+	*zoom: 1;
+}
+
+.bbtitles a.jksz {
+	padding-left: 40px;
+	background: url(../images/Icon-Small.png) left center no-repeat;
+}
+
+.bbtitles a:hover {
+	color: #000;
+	text-decoration: underline;
+}
+
+.bbtitles span.paixu {
+	line-height: 48px;
+	position: absolute;
+	right: 0px;
+	top: 36px;
+	display: block;
+	height: 48px;
+	font-size: 12px;
+	font-family: 宋体;
+	color: #666;
+}
+
+.bbtitles span.paixu span {
+	line-height: 48px;
+	*zoom: 1;
+}
+
+.bbtitles span.paixu a {
+	color: #666;
+}
+
+.bbtitles span.paixu a.current {
+	color: #ff3232;
+}
+
+.bbtitles span.paixu a:hover {
+	color: #ff3232;
+	text-decoration: underline;
+}
+
+.bbtitles_icon {
+	display: block;
+	height: 120px;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.index_pxw_w span.paixu {
+	line-height: 48px;
+	position: absolute;
+	right: 0px;
+	top: 36px;
+	display: block;
+	height: 48px;
+	font-size: 12px;
+	font-family: 宋体;
+	color: #666;
+}
+
+.index_pxw_w span.paixu span {
+	line-height: 48px;
+	*zoom: 1;
+}
+
+.index_pxw_w span.paixu a {
+	color: #666;
+}
+
+.index_pxw_w span.paixu a.current {
+	color: #ff3232;
+}
+
+.index_pxw_w span.paixu a:hover {
+	color: #ff3232;
+	text-decoration: underline;
+}
+
+.bbtitles span.paixu_cd {
+	line-height: 48px;
+	position: absolute;
+	right: 0px;
+	top: 36px;
+	display: block;
+	height: 48px;
+	font-size: 12px;
+	font-family: 宋体;
+	color: #666;
+}
+
+.bbtitles span.paixu_cd span {
+	line-height: 48px;
+	*zoom: 1;
+}
+
+.bbtitles span.paixu_cd a {
+	color: #666;
+}
+
+.bbtitles span.paixu_cd a.current {
+	color: #ff3232;
+}
+
+.bbtitles span.paixu_cd a:hover {
+	color: #ff3232;
+	text-decoration: underline;
+}
+
+.bbmore {
+	height: 80px;
+	line-height: 80px;
+	font-size: 16px;
+	color: #222;
+	text-align: center;
+	font-family: Microsoft Yahei;
+}
+
+.bbmore a {
+	color: #666;
+}
+
+.bbmore a:hover {
+	color: #222;
+	text-decoration: underline;
+}
+
+.littletips_new {
+	position: absolute;
+	right: -6px;
+	top: -6px;
+	height: 18px;
+	width: 52px;
+	background: url(../images/littletips_new.gif) 0px 0px no-repeat;
+	display: block;
+}
+
+body .pb0 {
+	padding-bottom: 0px;
+}
+
+body .pl0 {
+	padding-left: 0px;
+}
+
+body .ml0 {
+	margin-left: 0px;
+}
+
+body .mb0 {
+	margin-bottom: 0px;
+}
+
+body .mt0 {
+	margin-top: 0px;
+}
+
+body .mr0 {
+	margin-right: 0px;
+}
+
+body .mr10 {
+	margin-right: 10px;
+}
+
+body .fl {
+	float: left;
+}
+
+body .fr {
+	float: right;
+}
+
+body .mr1 {
+	margin-right: 1px;
+}
+
+body .mb1 {
+	margin-bottom: 1px;
+}
+
+.followTa {
+	display: block;
+	height: 22px;
+	width: 58px;
+	background: url(../images/follow_btn.png) 0px 0px no-repeat;
+	text-indent: -9999px;
+}
+
+.followTa:hover {
+	background-position: 0px -22px;
+	cursor: pointer;
+}
+
+.followTaed {
+	display: block;
+	height: 22px;
+	width: 58px;
+	background: url(../images/follow_btn.png) 0px -44px no-repeat;
+}
+
+.followTaed:hover {
+	background-position: 0px -66px;
+	cursor: pointer;
+}
+
+.gopage {
+	display: inline-block;
+	vertical-align: top;
+	*display: inline;
+	*zoom: 1;
+	font-size: 14px;
+	color: #666;
+}
+
+.gopage form {
+	display: inline-block;
+	vertical-align: top;
+	*display: inline;
+	*zoom: 1;
+	font-size: 14px;
+	color: #666;
+}
+
+.gopage input.text {
+	height: 38px;
+	line-height: 38px;
+	border: 1px solid #f5f5f5;
+	background: #fff;
+	width: 38px;
+	text-align: center;
+	color: #666;
+	font-size: 14px;
+}
+
+.gopage input.submit {
+	height: 38px;
+	line-height: 34px;
+	border: 1px solid #eee;
+	background: #f5f5f5;
+	width: 50px;
+	text-align: center;
+	color: #666;
+	font-size: 14px;
+	cursor: pointer;
+}
+
+.gopage input.submit:hover {
+	background: #ff3232;
+	color: #fff;
+	border: 1px solid #ff3232;
+}
+
+.messageBtn {
+	display: block;
+	height: 22px;
+	width: 58px;
+	background: #e4e4e4;
+	line-height: 22px;
+	font-size: 12px;
+	color: #333;
+	text-align: center;
+}
+
+.messageBtn:hover {
+	height: 22px;
+	width: 58px;
+	background: #ccc;
+}
+
+.titles_style1 {
+	display: block;
+	line-height: 50px;
+	height: 50px;
+	font-size: 18px;
+	color: #ff3232;
+	font-family: Microsoft Yahei;
+	text-indent: 20px;
+	border-bottom: 1px solid #ddd;
+}
+
+.pathstlye1 {
+	height: 88px;
+	line-height: 88px;
+}
+
+.pathstlye1 li {
+	height: 88px;
+	font-size: 18px;
+	color: #333;
+	display: inline-block;
+	*display: inline;
+	*zoom: 1;
+	vertical: top;
+	font-family: Microsoft Yahei;
+	padding: 0px 5px;
+}
+
+.pathstlye1 li h2 {
+	display: inline-block;
+	*display: inline;
+	*zoom: 1;
+	vertical: top;
+}
+
+.pathstlye1 li a {
+	color: #333;
+}
+
+.pathstlye1 li a:hover {
+	text-decoration: underline;
+	color: #ff3232;
+}
+
+.addToFav {
+	display: block;
+	height: 44px;
+	width: 140px;
+	display: Block;
+	background: #ff3232;
+	border: 1px solid #e90808;
+	line-height: 44px;
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+}
+
+.addToFav:hover {
+	background: #e90808;
+}
+
+.addToFav_Cd {
+	display: block;
+	height: 44px;
+	width: 140px;
+	display: Block;
+	background: #ff3232;
+	border: 1px solid #e90808;
+	line-height: 44px;
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+}
+
+.addToFav_Cd:hover {
+	background: #e90808;
+}
+
+.addToFaved {
+	background: #60a531;
+	border: 1px solid #46811d;
+	height: 44px;
+	width: 140px;
+	display: block;
+	line-height: 44px;
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+	cursor: default;
+}
+
+.addToFav_Cd {}
+
+.sharebtn_style1 {
+	background: #f5f5f5;
+	border: 1px solid #e5e5e5;
+	height: 44px;
+	width: 140px;
+	display: block;
+	line-height: 44px;
+	color: #888;
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+}
+
+.sharebtn_style1:hover {
+	background: #e5e5e5;
+}
+
+.main_search {
+	height: 60px;
+	width: 100%;
+	background: url(../images/black75.png) repeat;
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	z-index: 600;
+	_position: absolute;
+	_bottom: auto;
+	_top: expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-(parseInt(this.currentStyle.marginTop, 10)||0)-(parseInt(this.currentStyle.marginBottom, 10)||0)));
+}
+
+.main_search_slideUp {
+	bottom: -56px;
+	padding-top: 9px;
+	_padding-top: 0px;
+}
+
+.main_search_w {
+	width: 990px;
+	margin: 0px auto;
+	height: 60px;
+	position: relative;
+}
+
+.searchform_div {
+	width: 600px;
+	height: 48px;
+	margin: 6px auto;
+	background: #fff;
+	position: relative;
+	overflow: hidden;
+}
+
+.searchform_div input.text {
+	height: 20px;
+	border: none;
+	background: #fff;
+	width: 452px;
+	padding: 14px;
+	font-size: 14px;
+	color: #333;
+	line-height: 20px;
+	overflow: hidden;
+}
+
+.searchform_div input.submit {
+	position: absolute;
+	height: 48px;
+	width: 120px;
+	color: #fff;
+	font-size: 14px;
+	background: #ff3232;
+	border: 0px;
+	font-weight: bold;
+}
+
+#searchslideup_btn {
+	height: 48px;
+	width: 48px;
+	position: absolute;
+	top: 0px;
+	*top: 6px;
+	left: 1px;
+	text-indent: -9999px;
+	background: url(../images/searchslideup_btn.png) 0px 0px no-repeat;
+	z-index: 600;
+}
+
+#bottom_yjfl {
+	height: 48px;
+	width: 120px;
+	position: absolute;
+	top: 0px;
+	*top: 6px;
+	right: 11px;
+	text-indent: -9999px;
+	background: url(../images/bottom_yjfk.png) 0px 0px no-repeat;
+	z-index: 600;
+}
+
+#bottom_yjfl:hover {
+	background-position: 0px -48px;
+}
+
+.return_to_old {
+	width: 48px;
+	height: 120px;
+	left: 0px;
+	top: 0px;
+	position: absolute;
+	background: url(../images/return_to_old.png) 0px 0px no-repeat;
+}
+
+.return_to_old:hover {
+	background-position: -48px 0px;
+}
+
+.backtotop {
+	height: 48px;
+	width: 48px;
+	text-indent: -9999px;
+	background: url(../images/backtotop_icon.png) 0px 0px no-repeat;
+	z-index: 600;
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+}
+
+.backtotop:hover {
+	background-position: 0px -48px;
+}
+
+.bottom_back_top_top {
+	display: none;
+	height: 178px;
+	width: 48px;
+	text-indent: -9999px;
+	z-index: 600;
+	position: fixed;
+	bottom: 6px;
+	right: 6px;
+	_position: absolute;
+	_bottom: auto;
+	_top: expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-6-(parseInt(this.currentStyle.marginTop, 10)||0)-(parseInt(this.currentStyle.marginBottom, 10)||0)));
+}
+
+.bottom_back_top_top_slideUp {
+	bottom: 20px;
+	_top: expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-6-(parseInt(this.currentStyle.marginTop, 10)||0)-(parseInt(this.currentStyle.marginBottom, 10)||0)));
+}
+
+#doulike {
+	position: fixed;
+	right: 0px;
+	top: 325px;
+	width: 48px;
+	overflow: hidden;
+	z-index: 6000;
+	height: 331px;
+	width: 48px;
+	overflow: hidden;
+	_position: absolute;
+	_bottom: auto;
+	_top: expression(eval(document.documentElement.scrollTop+205));
+	_right: 0px;
+}
+
+#doulike .xbyjfk {
+	width: 48px;
+	height: 120px;
+	background: url(../images/return_to_old.png) -96px 0px no-repeat;
+	display: block;
+	position: absolute;
+	left: 0px;
+	top: 120px;
+	cursor: pointer;
+}
+
+#doulike .fhjbsy {
+	width: 48px;
+	height: 120px;
+	display: block;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+}
+
+#doulike .fhjbsy a {
+	display: block;
+	height: 120px;
+	width: 48px;
+	background: url(../images/return_to_old.png) -48px 0px no-repeat;
+	text-indent: -9999px;
+}
+
+#doulike .yjfkly {
+	width: 252px;
+	height: 331px;
+	background: #fff;
+	position: absolute;
+	left: 48px;
+	top: 0px;
+	border-top: 1px solid #ddd;
+}
+
+#doulike .yjfkly h3 {
+	color: #333;
+	font-size: 14px;
+	font-weight: bold;
+	height: 50px;
+	line-height: 50px;
+	text-indent: 14px;
+	float: left;
+}
+
+#doulike .yjfkly a {
+	display: block;
+	height: 70px;
+	width: 100px;
+	margin-left: 14px;
+	background: #f5f5f5;
+	float: left;
+	text-align: center;
+	line-height: 70px;
+	font-size: 24px;
+	font-family: Microsoft Yahei;
+	color: #333;
+	_display: inline;
+}
+
+#doulike .yjfkly a:hover {
+	background: #eee;
+}
+
+#doulike .yjfkly a.current {
+	background: #ff3232;
+	color: #fff;
+}
+
+#doulike .yjfkly textarea {
+	width: 194px;
+	margin: 14px 14px 14px;
+	padding: 10px;
+	background: #f5f5f5;
+	border: none;
+	height: 60px;
+	color: #999;
+	font-size: 14px;
+}
+
+#doulike .yjfkly input.submit {
+	display: block;
+	height: 32px;
+	width: 60px;
+	background: #ff3232;
+	border: 1px solid #e90808;
+	position: absolute;
+	bottom: 20px;
+	right: 24px;
+	color: #fff;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+#doulike .yjfkly input.submit:hover {
+	background: #e90808;
+}
+
+#doulike .yjfkly input.text {
+	height: 20px;
+	padding: 6px 10px;
+	line-height: 20px;
+	color: #999;
+	background: #f5f5f5;
+	border: none;
+	width: 194px;
+	font-size: 14px;
+	margin: 0px 14px;
+}
+
+#doulike .yjfkly a.yjfkshut {
+	display: block;
+	position: absolute;
+	right: 0px;
+	height: 0px;
+	top: 0px;
+	background: url(../images/yjfkshut.gif) 0px 0px no-repeat;
+	overflow: hidden;
+	height: 50px;
+	width: 50px;
+}
+
+#doulike .yjfkly a.yjfkshut:hover {
+	background: transparent url(../images/yjfkshut.gif) 0px -50px no-repeat;
+}
+
+.footer {
+	width: 990px;
+	margin: 0px auto;
+	height: 80px;
+	padding-bottom: 20px;
+}
+
+.footer p {
+	font-size: 14px;
+	color: #999;
+	font-weight: bold;
+	text-align: center;
+	line-height: 24px;
+}
+
+.footer span {
+	color: #999;
+	line-height: 18px;
+	text-align: center;
+	display: block;
+	padding-top: 20px;
+}
+
+#suggestions {
+	position: absolute;
+	left: 2px;
+	top: 82px;
+	z-index: 4530;
+	background: #fff;
+}
+
+#autoSuggestionsList {
+	width: 340px;
+	border: 1px solid #ddd;
+	background: #fff;
+	position: relative;
+	z-index: 500;
+	padding-bottom: 0px;
+}
+
+#autoSuggestionsList li {
+	height: 32px;
+	line-height: 32px;
+}
+
+#autoSuggestionsList li a {
+	display: block;
+	width: 340px;
+	overflow: hidden;
+	text-decoration: none;
+	color: #333;
+	line-height: 32px;
+	text-indent: 6px;
+}
+
+#autoSuggestionsList li a:hover {
+	background: #ff3232;
+	color: #fff;
+}
+
+#autoSuggestionsList li.ac_over a {
+	background: #ff3232;
+	color: #fff;
+}
+
+#autoSuggestionsList li span {
+	float: right;
+	color: #999;
+	margin: 0;
+	line-height: 32px;
+	padding-right: 6px;
+}
+
+#autoSuggestionsList li a:hover span {
+	color: #fff;
+}
+
+#autoSuggestionsList li.ac_over span {
+	color: #fff;
+}
+*/
+
+
+
+
+
+
+
+
